Fix problem with document displaying on mobile devices (#445)

--- a/css/main.less
+++ b/css/main.less
@@ -759,6 +759,16 @@ textarea {
             .document-editor-frame-wrapper {
                 padding-top: 15px;
             }
+            
+            .document-block-iframe-wrapper {
+                max-height: 550px;
+                -webkit-overflow-scrolling: touch;
+                overflow: auto;
+            }
+
+            .document-block-iframe-wrapper iframe {
+                display: block;
+            }
         }
     }
     /*endregion*/
